--- a/docs/GltfSVApp.css
+++ b/docs/GltfSVApp.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 /*! bulma.io v0.9.4 | MIT License | github.com/jgthms/bulma */
 /* Bulma Utilities */
+/* rebuild comment8 */
 .pagination-previous,
 .pagination-next,
 .pagination-link,
